--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.parallel=true
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.blinkmod
+	maven_group = lumyni.blinkmod
 	archives_base_name = BlinkMod
 
 # Dependencies
